optimizing junits and code